Fix logo spacing in site-header

--- a/user/themes/starter/assets/styles/modules/_site-header.scss
+++ b/user/themes/starter/assets/styles/modules/_site-header.scss
@@ -41,14 +41,15 @@
 
 	&__logo-flex-container {
 		display: flex;
-		justify-content: space-between;
 		align-items: center;
+		font-size: 0;
 	}
 
 	&__icon {
+		display: block;
 		
 		@include breakpoint(atSmall) {
-			margin-right: 10px;
+			margin-right: 20px;
 		}
 
 		& svg {
